--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,16 @@ spring.freemarker.suffix=.ftl
 
 # 数据源配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/workspace?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://108.61.223.36:3306/wetio?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=hack
-
-# mybatis 配置
-mybatis.config-location=classpath:mybatis/mybatis-config.xml
-mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+# stripped before adding them to the entity manager
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
